examples/invalid/seq.juni
fn main : x =>
  let hello = 1 in (
    florp + 1;
    hello
  )
